# leadghost

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  bot.py  pyproject.toml
src/leadghost/: __init__.py  bot.py  cli.py  selenium_bot.py  utils.py
src/leadghost/email_generator/: EmailGenerator.py  __init__.py  generator.py  validator.py
